src/test/deca/syntax/lexer/invalid/created/include/circular/circular_1.decah
#include "circular_2.decah"